--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -33,12 +33,6 @@
 
 @media (max-width: 1024px) {
   :root {
-    font-size: 28px;
-  }
-}
-
-@media (max-width: 640px) {
-  :root {
     font-size: 24px;
   }
 }
